# myopic

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
myopic/: __init__.py  _wizard.py  ast_chunker.py  cli.py  config.py  diff.py  embeddings.py  gitutil.py  ollama.py  server.py  symbol_patterns.py
myopic/semantic/: __init__.py  indexer.py  prune.py  store.py
myopic/tools/: __init__.py  changed_files.py  code_search.py  dependency_impact.py  diff_lines.py  diff_sections.py  hints.py  index_repo.py  post_comments.py  review_context.py  review_status.py  trace_call_chain.py  verify_review.py
tests/: test_autopull.py  test_diff.py  test_diff_sections.py  test_diff_tools.py  test_doctor.py  test_github_platform.py  test_gitutil.py  test_graph_tools.py  test_index_freshness.py  test_post_comments.py  test_prune.py  test_review_context_symbols.py  test_root_guard.py  test_semantic.py  test_verify_review.py  test_wizard.py
