[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myopic"
version = "0.0.6"
description = "The code-review MCP that reviews your merge request against the whole codebase, not just the diff"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Suraj Goyal", email = "sgoyal275@gmail.com" }]
keywords = ["mcp", "llm", "code-review", "gitlab", "merge-request", "claude", "ai-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "python-gitlab>=4.0",
    "PyGithub>=2.0",
    "click>=8.0",
    "rich>=13.0",

    # AST-aware chunking (mr_diff_sections)
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
semantic = ["lancedb>=0.34", "httpx>=0.27"]

[project.scripts]
myopic = "myopic.cli:cli"

[project.entry-points."mcp.servers"]
myopic = "myopic.server:mcp"

[project.urls]
Homepage = "https://github.com/SurajKGoyal/myopic"
Repository = "https://github.com/SurajKGoyal/myopic"
Issues = "https://github.com/SurajKGoyal/myopic/issues"

[tool.hatch.build.targets.wheel]
packages = ["myopic"]
